[package]
name = "syster-cli"
version = "0.1.8-alpha"
edition = "2024"
rust-version = "1.85"
authors = ["jade-codes"]
license = "MIT"
repository = "https://github.com/jade-codes/syster-cli"
description = "Command-line interface for SysML v2 and KerML analysis"

[[bin]]
name = "syster"
path = "src/main.rs"

[lib]
name = "syster_cli"
path = "src/lib.rs"

[dependencies]
syster-base = { git = "https://github.com/jade-codes/syster-base.git" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
