[package]
name = "syster-cli"
version = "0.3.1-alpha"
edition = "2024"
rust-version = "1.85"
authors = ["jade-codes"]
license = "MIT"
repository = "https://github.com/jade-codes/syster-cli"
description = "Command-line interface for SysML v2 and KerML analysis"

[features]
default = ["interchange"]
interchange = ["syster-base/interchange"]

[[bin]]
name = "syster"
path = "src/main.rs"

[lib]
name = "syster_cli"
path = "src/lib.rs"

[dependencies]
syster-base = "0.3.1-alpha"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
zip = "7.2.0"
